--- a/src/API/requirements.txt
+++ b/src/API/requirements.txt
@@ -1,13 +1,11 @@
-anyio==3.6.1
 asgiref==3.5.2
 click==8.1.3
-colorama==0.4.4
-fastapi==0.78.0
+colorama==0.4.5
+Flask==2.1.2
 gunicorn==20.1.0
 h11==0.13.0
-idna==3.3
-pydantic==1.9.1
-sniffio==1.2.0
-starlette==0.19.1
-typing_extensions==4.2.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 uvicorn==0.17.6
+Werkzeug==2.1.2
