--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
+altgraph==0.17.2
+anyio==3.6.1
 asgiref==3.5.2
+certifi==2022.6.15
+charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.5
-Flask==2.1.2
+fastapi==0.78.0
+future==0.18.2
 gunicorn==20.1.0
 h11==0.13.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-uvicorn==0.17.6
-Werkzeug==2.1.2
-altgraph==0.17.2
-future==0.18.2
-pefile==2021.9.3
-pyinstaller==4.10
-pyinstaller-hooks-contrib==2022.3
+idna==3.3
+pefile==2022.5.30
+pydantic==1.9.1
+pyinstaller==5.1
+pyinstaller-hooks-contrib==2022.7
 pywin32-ctypes==0.2.0
+requests==2.28.0
+sniffio==1.2.0
+starlette==0.19.1
+typing_extensions==4.2.0
+urllib3==1.26.9
+uvicorn==0.17.6
