--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,9 @@
 altgraph==0.17.2
-anyio==3.6.1
-asgiref==3.5.2
-certifi==2022.6.15
-charset-normalizer==2.0.12
-click==8.1.3
-colorama==0.4.5
-fastapi==0.78.0
+commonmark==0.9.1
 future==0.18.2
-gunicorn==20.1.0
-h11==0.13.0
-idna==3.3
 pefile==2022.5.30
-pydantic==1.9.1
-pyinstaller==5.1
-pyinstaller-hooks-contrib==2022.7
+Pygments==2.13.0
+pyinstaller==5.4
+pyinstaller-hooks-contrib==2022.10
 pywin32-ctypes==0.2.0
-requests==2.28.0
-sniffio==1.2.0
-starlette==0.19.1
-typing_extensions==4.2.0
-urllib3==1.26.9
-uvicorn==0.17.6
+rich==12.5.1
